--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ When mothers have named their children by your name indeed."
         <div class="container">
             <h2 class="section-heading">Thought Three</h2>
             <div class="chat-question">
-                When they called you mine!
+                When they call you mine!
             </div>
             <div class="section-poetry">
                 کتنا اچھا ہے تیرا نام میرے نام کے آگے<br>
